--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
     };
   </script>
   <script src="login.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/appwrite@16.1.0"></script>
+<script>
+    const { Client } = Appwrite;
+</script>
 </body>
 </html>
