--- a/index.html
+++ b/index.html
@@ -26,30 +26,14 @@
     </div>
   </div>
 
-
+  <!-- Google SDK -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script>
-    function handleGoogleLogin(credentialResponse) {
-      console.log('Google ID Token:', credentialResponse.credential);
-      
-    }
 
-    google.accounts.id.initialize({
-      client_id: 'elizabethjohney59@gmail.com', 
-      callback: handleGoogleLogin
-    });
-
-    google.accounts.id.renderButton(
-      document.getElementById("google-login"),
-      { theme: "outline", size: "large" }
-    );
-  </script>
-
-
+  <!-- Facebook SDK -->
   <script>
     window.fbAsyncInit = function() {
       FB.init({
-        appId: 'elsojohney', 
+        appId: 'elsojohney', // Replace with your Facebook App ID
         cookie: true,
         xfbml: true,
         version: 'v16.0'
@@ -59,27 +43,61 @@
 
     (function(d, s, id){
       var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) {return;}
+      if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = "https://connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+  </script>
 
-    document.getElementById('facebook-login').onclick = function() {
-      FB.login(function(response) {
+  <!-- Custom JavaScript for Login Logic -->
+  <script>
+    // Google Login Logic
+    function initializeGoogleLogin() {
+      google.accounts.id.initialize({
+        client_id: 'elizabethjohney59@gmail.com', // Replace with your Google Client ID
+        callback: handleGoogleLogin
+      });
+
+      google.accounts.id.renderButton(
+        document.getElementById("google-login"), 
+        { theme: "outline", size: "large" }
+      );
+    }
+
+    function handleGoogleLogin(credentialResponse) {
+      console.log('Google ID Token:', credentialResponse.credential);
+      // Send this token to your server for verification.
+    }
+
+    // Facebook Login Logic
+    function initializeFacebookLogin() {
+      // Already initialized in the Facebook SDK script
+    }
+
+    function handleFacebookLogin() {
+      FB.login(function (response) {
         if (response.status === 'connected') {
           console.log('Facebook Access Token:', response.authResponse.accessToken);
-          
+          // Send this token to your server for verification.
         } else {
           console.log('User cancelled login or did not fully authorize.');
         }
-      }, {scope: 'email'});
-    };
+      }, { scope: 'email' });
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      // Initialize Google and Facebook login SDKs
+      initializeGoogleLogin();
+
+      // Attach Facebook login click handler
+      const facebookLoginButton = document.getElementById('facebook-login');
+      if (facebookLoginButton) {
+        facebookLoginButton.addEventListener('click', handleFacebookLogin);
+      }
+    });
   </script>
-  <script src="login.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/appwrite@16.1.0"></script>
-<script>
-    const { Client } = Appwrite;
-</script>
+  <div id="buttonDiv"></div>
 </body>
 </html>
+
