--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         window.onload = function() {
             google.accounts.id.initialize({
-                client_id: 'YOUR_GOOGLE_CLIENT_ID',
+                client_id: '371864218808-vacr38h55oc18an694pvn8mmbj58ad05.apps.googleusercontent.com',
                 callback: handleCredentialResponse
             });
             google.accounts.id.renderButton(
